--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: ruby
 rvm:
- - 2.0
- - 2.1
- - 2.2
- - 2.3
- - jruby
- - rbx-2
+ - 2.2.2
+ - 2.3.0
+ # - jruby
+ # - rbx-2
 before_install: 
   - gem install bundler -v 1.12.5
 
