--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -17,14 +17,14 @@ jobs:
   lint_and_test:
     env:
       RACK_ENV: test
+      COVERAGE: "true"
     strategy:
       fail-fast: false
       matrix:
-        # os: [ubuntu-latest, macos-latest]
-        os: [ubuntu-latest]
-        ruby: ["3.0", "3.1", "3.2", "3.3"]
+        os: [ubuntu-latest, macos-latest]
+        ruby: ["3.0", "3.1", "3.2", "3.3", "jruby-9.4"]
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 2
+    timeout-minutes: 3
 
     steps:
       - uses: actions/checkout@v4
