--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,6 +17,7 @@ require:
 # See https://docs.rubocop.org/rubocop/configuration
 
 AllCops:
+    TargetRubyVersion: "3.0"
     NewCops: enable
 
 Layout/LineLength:
